# rag-mik-1

./: .gitignore
backend/: .example.env  .gitignore  pyproject.toml  rag_evaluation.py  run.py  test.db  test.py
backend/src/: main.py  models.py
backend/src/auth/: hashing.py  router.py  schemas.py  security.py
backend/src/core/: config.py  db.py
backend/src/crud/: __init__.py  user.py
backend/src/modules/: DocumentTools.py  RAGSystem.py  SemanticSearch.py  document_tools.py  llm.py  llm_local.py  rag_exeptions.py  rag_system.py  rerank.py  search.py  semantic_search.py  test.py  text_embedder.py  vector_db_infer.py
backend/src/routers/: query.py  rag.py  users.py
backend/src/schemas/: __init__.py  query.py  user.py
backend/src/static/: Katalog.md
backend/src/static/docs/: Calibrationnew.md  Katalog.md  MIK-1_Technical_Specification.md  NewRukovodstvo.md  Инструкция по калибровке.md  Калибровка.md  Каталог неисправностей и методов устранения.md  Каталог_типовых_неисправностей.md  Регламент технического обслуживания.md  Регламент.md  Руководство по эксплуатации.md  Руководство_по_эксплуатации.md  ТЗ.md  Техническая_спецификация.md  Технические спецификации.md
backend/src/static/questions/: 100Questions.md  Test_Questions_50.md
backend/src/vector_db/: chroma.sqlite3  embeddings.npy  index.index
frontend/: package.json
frontend/src/: App.vue  main.js
frontend/src/api/: auth.js  query.js  rag.js
frontend/src/components/: Chat.vue  Documents.vue  Navbar.vue
frontend/src/composables/: query.js
frontend/src/config/: api.js
frontend/src/pages/: Home.vue  Login.vue  Register.vue  test.vue
frontend/src/router/: index.js
frontend/src/stores/: auth.js  chat.js  rag.js
