[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Frekenboken",email = "pavel.ov07@mail.ru"}
]
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.117.1,<0.118.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "authx (>=1.4.3,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "passlib (==1.7.4)",
    "bcrypt (==4.0.1)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "faiss-cpu (>=1.13.1,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "unstructured (>=0.18.21,<0.19.0)",
    "transformers (>=4.57.3,<5.0.0)",
    "einops (>=0.8.1,<0.9.0)",
    "langchain-gigachat (>=0.3.12,<0.4.0)",
    "hf-xet (>=1.2.0,<2.0.0)",
    "pymorphy2 (>=0.9.1,<0.10.0)",
    "natasha (>=1.6.0,<2.0.0)",
    "chromadb (>=1.3.7,<2.0.0)",
    "langchain (>=1.2.0,<2.0.0)",
    "rank-bm25 (>=0.2.2,<0.3.0)",
    "sortedcontainers (>=2.4.0,<3.0.0)",
    "bitsandbytes (>=0.49.0,<0.50.0)",
    "accelerate (>=1.12.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
torch = "^2.5.1"

[[tool.poetry.source]]
name = "pytorch_gpu"
url = "https://download.pytorch.org/whl/cu124"
priority = "supplemental"
